--- a/isaacgymenvs/cfg/task/FrankaReach.yaml
+++ b/isaacgymenvs/cfg/task/FrankaReach.yaml
@@ -8,11 +8,11 @@ env:
   numEnvs: ${resolve_default:8192,${...num_envs}}
   envSpacing: 1.5
   episodeLength: 300
-  enableDebugVis: False
 
   clipObservations: 5.0
   clipActions: 1.0
 
+  startPositionNoise: 0.25
   frankaDofNoise: 0.25
 
   actionScale: 1.0
@@ -57,3 +57,4 @@ render:
   cameraLookAtEnvId: 0
   cameraPosition: [1.0, 1.0, 2.0]
   cameraTarget: [0.0, 0.0, 1.0]
+  enableDebugVis: False
