--- a/isaacgymenvs/cfg/task/FrankaReach.yaml
+++ b/isaacgymenvs/cfg/task/FrankaReach.yaml
@@ -15,13 +15,10 @@ env:
   startPositionNoise: 0.25
   frankaDofNoise: 0.25
 
-  actionScale: 1.0
-  distRewardScale: 0.1
-  liftRewardScale: 1.5
-  alignRewardScale: 2.0
-  stackRewardScale: 16.0
+  actionScale: 2.5
+  dofVelocityScale: 0.1
 
-  controlType: joint_tor  # options are {joint_tor, osc}
+  controlType: joint  # options are {joint, cartesian}
 
   asset:
     assetRoot: "../../assets"
